--- a/doit-vuejs/exam/05/05-1/index.html
+++ b/doit-vuejs/exam/05/05-1/index.html
@@ -4,6 +4,8 @@
   </head>
   <body>
     <div id="app">
+      <p>{{idA}}</p>
+      <!-- <p id="{{idA}}"></p> 안되요! -->
       <p v-bind:id="idA">아이디 바인딩</p>
       <p v-bind:class="classA">클래스 바인딩</p>
       <p v-bind:style="styleA">스타일 바인딩</p>
