--- a/doit-vuejs/exam/05/05-2/index.html
+++ b/doit-vuejs/exam/05/05-2/index.html
@@ -14,7 +14,7 @@
       new Vue({
         el: '#app',
         data: {
-          message: 'Hello Vue.js!'
+          message: 'hello'
         }
       });
     </script>
