--- a/doit-vuejs/exam/05/05-3/index.html
+++ b/doit-vuejs/exam/05/05-3/index.html
@@ -5,13 +5,22 @@
   <body>
     <div id="app">
       <!-- 1. -->
-      {{ var a = 10; }} <!-- X, 선언문은 사용 불가능 -->
-      {{ if (true) {return 100} }} <!-- X, 분기 구문은 사용 불가능 -->
+      <!-- {{ var a = 10; }}  -->
+      <!-- X, 선언문은 사용 불가능 -->
+      <!-- {{ if (true) {return 100} }}  -->
+      <!-- X, 분기 구문은 사용 불가능 -->
+      
       {{ true ? 100 : 0 }} <!-- O, 삼항 연산자로 표현 가능 -->
 
       <!-- 2. -->
       {{ message.split('').reverse().join('') }} <!-- X, 복잡한 연산은 인스턴스 안에서 수행 -->
       {{ reversedMessage }} <!-- O, 스크립트에서 computed 속성으로 계산 후 최종 값만 표현 -->
+      <hr>
+      {{ reversedMessage }}
+      <hr>
+      {{ justReturn() }}
+      <hr>
+      {{ justReturn() }}
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.2/dist/vue.js"></script>
@@ -21,9 +30,24 @@
         data: {
           message: 'Hello Vue.js!'
         },
+        // methods 안에 배치하는 함수와 computed 안에 배치하는 함수는
+        // 상당히 다릅니다. 다른점은 다음과 같습니다.
+        // 1. computed 안에 배치하는 함수가 사용하는 data 안의 변수가
+        // 변경될 때 함수가 자동으로 기동합니다.
+        // 2. 사용할 때 함수명만으로 사용합니다. 괄호를 사용하지 않습니다.
+        // 3. 함수안에서 사용하는 data 안의 변수가 변경되지 않으면
+        // 함수로직을 기동시키지 않고 대신 이 전에 처리결과를 사용합니다.
+        // Memoization Pattern
         computed: {
           reversedMessage: function() {
+            console.log('reversedMessage() called.');
             return this.message.split('').reverse().join('');
+          }
+        },
+        methods: {
+          justReturn: function () {
+            console.log('justReturn() called.');
+            return 100;
           }
         }
       });
