--- a/book/life/index.html
+++ b/book/life/index.html
@@ -13,12 +13,14 @@
     {{ message }}
   </div>
   <!-- 
+  브라우저에게 전달된 소스 내용
   <div id="app">
     Hello Vue.js!
   </div>
    -->
-   
+  
   <div class="">
+    <!-- 처리되지 않는다. -->
     {{ message }}
   </div>
   
